k8s/base/agent/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: homeostat-agent
  namespace: homeostat
  labels:
    app: homeostat-agent
    component: agent
    app.kubernetes.io/name: homeostat-agent
    app.kubernetes.io/part-of: homeostat
spec:
  type: ClusterIP
  selector:
    app: homeostat-agent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
